Revision history for Config::App

{{$NEXT}}

1.03      2015-09-08 19:13:28-07:00 America/Los_Angeles
        - Library directory injection during import

1.02      2015-06-09 19:10:53-07:00 America/Los_Angeles
        - Small POD improvement

1.01      2015-06-09 18:46:36-07:00 America/Los_Angeles
        - First version, released on an unsuspecting world.