@@ -19,6 +19,12 @@ is( $obj->get('answer'), 2048, 'Included file overrides correctly' );
 ok( $obj = MODULE->new( 'config/alt.yaml', 1 ), MODULE . '->new( $file, 1 )' );
 is( $obj->get('answer'), 45, 'Alt file with no include works correctly' );
 
+ok( $obj = MODULE->new( 'config/app_optional.yaml', 1 ), MODULE . '->new( $file, 1 )' );
+is( $obj->get('answer'), 2048, 'Optional existing included file overrides correctly' );
+
+ok( $obj = MODULE->new( 'config/app_optional_missing.yaml', 1 ), MODULE . '->new( $file, 1 )' );
+is( $obj->get('answer'), 42, 'Optional non-existing included file silently skipped' );
+
 my $env = $ENV{CONFIGAPPINIT};
 $ENV{CONFIGAPPINIT} = 'config/alt.yaml';
 ok( $obj = MODULE->new( undef, 1 ), MODULE . '->new( $file, 1 )' );
