@@ -1,6 +1,7 @@
 Revision history for Config::App
 
 {{$NEXT}}
+        - Add "optional_include" keyword functionality
 
 1.03      2015-09-08 19:13:28-07:00 America/Los_Angeles
         - Library directory injection during import
